--- a/style/first-section.css
+++ b/style/first-section.css
@@ -64,7 +64,7 @@
 
   .location {
     width: 28px;
-    opacity: 50%;
+    opacity: 100%;
   }
   .search-input {
     display: inline-block;
@@ -133,4 +133,98 @@
     width: 24px;
     margin-right: 7px;
   }
+}
+@media only screen and (max-width:500px){
+  .destinations{
+    max-width: 375px;
+
+  }
+  .des-hero{
+    width: 335px;
+    display: block;
+    margin-top: 20px;
+    h2{
+      width: 325px;
+      font-size: 40px;
+      line-height: 52px;
+      margin: 46px 0 10px 0;
+    }
+  }
+  .des-search{
+    text-align:start;
+    .des-choices{
+      text-align: start;
+      width:335px ;
+      font-size: 16px;
+      font-weight: 400px;
+      line-height: 24px;
+      margin: 12px 0;
+    }
+  }
+  .search-bar{
+    width: 335px;
+    height: 56px;
+    padding: 0;
+  }
+  .search-box{
+    width: 320px;
+        height: 56px;
+    
+    .search-input{
+      width: 212px;
+      font-size: 16px;
+    }
+    .location{
+margin: 8px;
+    }
+    .dot{
+      height: 44px;
+      width: 44px;
+      .search-icon{
+        margin: 15px;
+                height: 15px;
+                width: 15px;
+      }
+    }
+  }
+  .list-of-destination{
+    margin: 0 24px;
+    margin-top: 64px;
+    max-width: 375px;
+  }
+  .destination-card:nth-child(2){
+    display: none;
+  }
+  .destination-card:nth-child(3){
+    display: none;
+  }
+  .destination-card:nth-child(4){
+    display: none;
+  }
+  .destination-card:nth-child(5){
+    display: none;
+  }
+  .destination-card:nth-child(6){
+    display: none;
+  }
+ 
+  .destination-card:nth-child(1) {
+    width: 335px;
+    margin: 0;
+  }
+  .place-image:nth-child(1){
+    width: 311px;
+height: 262px;
+margin: 12px;
+  }
+  .card-content{
+    width: 311px;
+    .card-title{
+      font-size: 20px;
+    }
+    .card-description{
+      font-size: 16px;
+    }
+  }
+  
 }
