--- a/style/second-section.css
+++ b/style/second-section.css
@@ -1,12 +1,10 @@
 .reason {
   display: block;
-  max-width: 1440px;
-  max-height: 864px;
-  margin: 100px 160px;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 .reason-hero {
   width: 879px;
-  height: 204px;
   gap: 24px;
   margin: 0 auto;
   padding-top: 55px;
@@ -15,7 +13,6 @@
 h3 {
   display: inline-block;
   width: 670px;
-  height: 84px;
   border-width: 0.2px;
   font-family: Gilda Display;
   font-weight: 400;
@@ -27,7 +24,6 @@ h3 {
 p {
   margin: 0;
   width: 879px;
-  height: 96px;
   font-family: Urbanist;
   font-weight: 500;
   font-size: 18px;
@@ -40,23 +36,20 @@ p {
   display: inline-flex;
   justify-content: space-between;
   width: 1200px;
-  height: 400px;
-
   margin-top: 66px;
   .reason-card {
     width: 381.33px;
-    height: 400px;
+
     border-top: 4px solid #25a59e;
     box-shadow: 10px 26px 150px 0px #4343641a;
-
     .reason-card-content {
       width: 317.3333435058594px;
-      height: 208px;
+
       margin: 32px;
     }
     .title-card {
       width: 317.3333435058594px;
-      height: 124px;
+
       border-width: 0.4px;
       font-family: Gilda Display;
       font-weight: 400;
@@ -68,7 +61,6 @@ p {
     }
     .content-card {
       width: 317.3333435058594px;
-      height: 64px;
       font-family: Urbanist;
       font-weight: 400;
       font-size: 18px;
@@ -79,7 +71,6 @@ p {
     .details {
       display: inline-flex;
       width: 148px;
-      height: 24px;
       margin-top: 62px;
       margin-left: 181px;
       justify-content: center;
@@ -87,7 +78,6 @@ p {
     .detail-text {
       display: inline-block;
       width: 112px;
-      height: 24px;
       border-width: 0.4px;
       font-family: Gilda Display;
       font-weight: 400px;
@@ -99,7 +89,6 @@ p {
     .arrow {
       display: inline-flex;
       width: 24px;
-      height: 24px;
       margin-left: 12px;
     }
   }
@@ -111,12 +100,10 @@ p {
 
     .reason-card-content {
       width: 317.3333435058594px;
-      height: 208px;
       margin: 32px;
     }
     .title-card {
       width: 317.3333435058594px;
-      height: 124px;
       border-width: 0.4px;
       font-family: Gilda Display;
       font-weight: 400;
@@ -128,7 +115,6 @@ p {
     }
     .content-card {
       width: 317.3333435058594px;
-      height: 64px;
       font-family: Urbanist;
       font-weight: 400;
       font-size: 18px;
@@ -139,7 +125,6 @@ p {
     .details {
       display: inline-flex;
       width: 148px;
-      height: 24px;
       margin-top: 62px;
       margin-left: 181px;
       justify-content: center;
@@ -147,7 +132,6 @@ p {
     .detail-text {
       display: inline-block;
       width: 112px;
-      height: 24px;
       border-width: 0.4px;
       font-family: Gilda Display;
       font-weight: 400px;
@@ -159,7 +143,6 @@ p {
     .arrow {
       display: inline-flex;
       width: 24px;
-      height: 24px;
       margin-left: 12px;
     }
   }
